k8s/chatapp-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: chatapp-ingress
  annotations:
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
spec:
  rules:
    - host: chatapp.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 5173

          - path: /api
            pathType: Prefix
            backend:
              service:
                name: backend
                port:
                  number: 5000

          - path: /ws
            pathType: Prefix
            backend:
              service:
                name: websocket
                port:
                  number: 8080
